force-app/main/default/objects/Knowledge__kav/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <description>The main content of the knowledge article.</description>
    <inlineHelpText>Click Edit and enter the content for a knowledge article here. Users see this information when they search and select an article</inlineHelpText>
    <label>Body</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>