force-app/main/default/objects/Knowledge__kav/fields/Training_Videos_Link__c.field-meta.xml
<CustomField>
    <fullName>Training_Videos_Link__c</fullName>
    <label>Training Videos Link</label>
    <type>Url</type>
</CustomField>